--- a/CV Nguyen Gia Phuc.html
+++ b/CV Nguyen Gia Phuc.html
@@ -1,15 +1,15 @@
-
+<!DOCTYPE html>
 <html>
   <head>
     <title>Curriculum Vitae</title>
-    <style>
-    table, td,th {
-      border: 1px  solid black;
-      border-collapse:collapse;
-      background: rgba(155, 180, 199,0.1)
-    }
-    </style>
+    <link rel="stylesheet" href="CSS/style.css">
   </head>
+  <style media="screen">
+  body{
+    background-color: black;
+
+  }
+  </style>
   <body>
 
     <h1 align ='center'>Curriculum Vitae 😎😎😎😎</h1>
