--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="part1">
     <img class="cloud1" src="image/cloud.png" alt="">
-    <h1>I'm Angela</h1>
+    <h1>I'm Phuc</h1>
     <h2>a <span><u>Pro</u></span>gramer</h2>
     <div class="mountain-cloud2">
     <img class="cloud2" src="image/cloud.png" alt="">
